# arc-meshchop

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DATA.md  KNOWN_ISSUES.md  Makefile  NESTED-CV-PROTOCOL.md  README.md  SECURITY.md  TRAINING.md  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml
configs/model/: meshnet_26.yaml
configs/training/: default.yaml
data/: .gitignore  README.md
docs/: BLOCKERS.md  DOCS-META-PLAN.md  KNOWN_ISSUES.md  README.md  REPRODUCIBILITY.md  TODO.md  TROUBLESHOOTING.md
docs/archive/: BLOCKERS.md  README.md
docs/archive/bugs/: BUG-001-audit-findings.md  BUG-002-metric-aggregation.md  BUG-003-runner-issues.md  BUG-007-cli-experiment-variant-not-validated.md
docs/archive/legacy/: TODO.md
docs/archive/research/: 03-training-configuration.md  04-model-variants.md  06-implementation-checklist.md  audit_report.md
docs/archive/specs/: 01-project-setup.md  02-meshnet-architecture.md  03-data-pipeline.md  04-training-infrastructure.md  05-evaluation-metrics.md  FIX-001-bids-hub-integration.md  local-02-training-cli.md  local-05-upstream-dataset-fixes.md  local-06-data-contract-hardening.md
docs/bugs/: BUG-001-audit-findings.md  BUG-002-metric-aggregation.md  BUG-003-runner-issues.md  BUG-004-mask-paths-alignment.md  BUG-005-cache-key-ignores-mask-path.md  BUG-006-dataset-info-paths-are-cwd-relative.md  BUG-007-cli-experiment-variant-not-validated.md  BUG-008-dataset-info-path-resolution.md  BUG-009-stale-doc-references.md  BUG-010-docstring-doc-coupling.md  BUG-011-hpo-pruning-metric-reset.md  BUG-012-nondeterministic-seeding.md  BUG-013-stratifiedkfold-small-class-failure.md  BUG-014-run-logs-and-io-registry-gap.md  BUG-015-training-accuracy-investigation.md  BUG-016-cross-platform-audit.md  NESTED-CV-PROTOCOL.md  README.md
docs/bugs/archive/: BUG-009-stale-doc-references.md
docs/issues/: OPT-001-download-performance.md  TRAIN-001-runtime-estimates.md
docs/reference/: dataset.md  io-registry.md  meshnet.md  metrics.md  paper-implementation-audit.md  training.md  variants.md
docs/research/: 00-overview.md  01-architecture.md  02-dataset-preprocessing.md  03-training-configuration.md  04-model-variants.md  05-evaluation-metrics.md  06-implementation-checklist.md  audit_report.md
docs/specs/: 00-index.md  01-project-setup.md  02-meshnet-architecture.md  03-data-pipeline.md  04-training-infrastructure.md  05-evaluation-metrics.md  06-model-export.md  07-huggingface-spaces.md  08-cross-platform.md  09-io-registry-and-logging.md  10-reproducibility-seeding.md  11-hpo-trial-metric-reporting.md  12-stratification-guardrails.md  IO-DIRECTORY-STRUCTURE.md  local-05-upstream-dataset-fixes.md
docs/specs/_archived/: 04-training-infrastructure.md  08-cross-platform.md
docs/specs/local/: FIX-001-bids-hub-integration.md  local-01-hf-data-loader.md  local-02-training-cli.md  local-03-experiment-runner.md  local-04-paper-parity-validation.md  local-05-upstream-dataset-fixes.md
experiments/fold_0_restart_0/: final.pt  results.json
experiments/fold_0_restart_1/: results.json
experiments/fold_0_restart_2/: final.pt
experiments/mac/fold_0_restart_1/: final.pt
experiments/mac/fold_0_restart_2/: results.json
src/arc_meshchop/: __init__.py  cli.py
src/arc_meshchop/data/: __init__.py  config.py  dataset.py  huggingface_loader.py  preprocessing.py  splits.py
src/arc_meshchop/evaluation/: __init__.py  evaluator.py  metrics.py  statistics.py
src/arc_meshchop/experiment/: __init__.py  config.py  runner.py
src/arc_meshchop/export/: __init__.py  onnx_export.py  pipeline.py  tfjs_export.py
src/arc_meshchop/models/: __init__.py  meshnet.py
src/arc_meshchop/training/: __init__.py  config.py  hpo.py  loss.py  optimizer.py  trainer.py
src/arc_meshchop/utils/: __init__.py  device.py  paths.py  seeding.py
src/arc_meshchop/validation/: __init__.py  parity.py
tests/: __init__.py  conftest.py  test_cli_bug_006.py  test_cli_bug_007.py  test_cli_bug_008.py  test_cli_bug_011.py  test_cli_bug_012.py  test_smoke.py
tests/test_data/: test_bug_005.py  test_dataset.py  test_huggingface_loader.py  test_preprocessing.py  test_splits.py
tests/test_evaluation/: test_evaluator.py  test_metrics.py  test_statistics.py
tests/test_experiment/: test_runner.py  test_runner_logic.py
tests/test_export/: __init__.py  test_onnx.py  test_pipeline.py
tests/test_models/: __init__.py  test_meshnet.py
tests/test_training/: test_hpo.py  test_loss.py  test_optimizer.py  test_trainer.py
tests/test_validation/: test_parity.py
