[project]
name = "arc-meshchop"
version = "0.1.0"
description = "MeshNet stroke lesion segmentation - paper replication"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "arc-meshchop contributors" },
]
keywords = [
    "meshnet",
    "stroke",
    "lesion",
    "segmentation",
    "mri",
    "neuroimaging",
    "deep-learning",
    "pytorch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core ML
    # NOTE: torch>=2.4.0 required for torch.amp.GradScaler(device, ...) API
    # Earlier versions only support torch.cuda.amp.GradScaler()
    "torch>=2.4.0",
    "torchvision>=0.19.0",  # Matches torch 2.4+

    # Medical imaging
    "nibabel>=5.0.0",
    "monai>=1.3.0",

    # HuggingFace datasets for ARC data access
    # neuroimaging-go-brrrr v0.2.1 provides BIDS/NIfTI utilities on top of HuggingFace datasets
    # Import from bids_hub module: from bids_hub.datasets.arc import ...
    "neuroimaging-go-brrrr @ git+https://github.com/The-Obstacle-Is-The-Way/neuroimaging-go-brrrr.git@v0.2.1",
    "datasets>=3.4.0",
    "huggingface-hub>=0.32.0",

    # Data handling
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",  # Holm-Bonferroni correction for statistical testing
    "scikit-learn>=1.3.0",  # For StratifiedKFold

    # Configuration
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",

    # Hyperparameter optimization (Phase 4)
    # NOTE: orion>=0.2.7 removed from core deps - broken on Python 3.12
    # (uses deprecated configparser.SafeConfigParser removed in 3.12)
    # Use optuna instead, or install orion manually with Python 3.10/3.11
    "optuna>=3.5.0",

    # Logging & tracking
    "tensorboard>=2.14.0",
    "tqdm>=4.65.0",

    # CLI
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.5.0",       # Parallel test execution
    "pytest-sugar>=1.0.0",       # Pretty test output
    "pytest-mock>=3.12.0",       # Mocking utilities

    # Type checking
    "mypy>=1.11.0",
    "types-tqdm>=4.66.0",
    "pandas-stubs>=2.0.0",

    # Linting & formatting
    "ruff>=0.8.0",

    # Pre-commit
    "pre-commit>=3.0.0",
]

export = [
    # Model export (Spec 06)
    # NOTE: onnx-tf and tensorflowjs removed - they require TensorFlow which
    # doesn't have ARM Mac wheels. Install manually on Linux for TFJS export.
    "onnx>=1.14.0",
    "onnxruntime>=1.16.0",
    "onnxscript>=0.1.0",  # Required by torch>=2.9 for ONNX export
]

huggingface = [
    # Additional HuggingFace integration (Spec 07)
    # Note: datasets and huggingface-hub are already in core dependencies
    # NO GRADIO - deployment uses Docker-based HF Spaces
]

all = [
    "arc-meshchop[dev,export,huggingface]",
]

[project.scripts]
arc-meshchop = "arc_meshchop.cli:app"

[project.urls]
Homepage = "https://github.com/username/arc-meshchop"
Repository = "https://github.com/username/arc-meshchop"
Issues = "https://github.com/username/arc-meshchop/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/arc_meshchop"]

# =============================================================================
# RUFF - Linting & Formatting
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["*.ipynb", "_references/*", "_literature/*"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "RUF",    # ruff-specific
    "D",      # pydocstyle (docstrings)
    "ANN",    # flake8-annotations
]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
    # ANN101/ANN102 removed in ruff 0.8+ (self/cls annotations no longer checked)
]

[tool.ruff.lint.isort]
known-first-party = ["arc_meshchop"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# =============================================================================
# PYTEST - Testing
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=src/arc_meshchop",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    # Coverage threshold will increase as we add actual implementation
    # Phase 1: Bootstrap - minimal code, no threshold
    # Phase 2+: Increase to 80% as implementation grows
    "--cov-fail-under=0",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "integration: marks integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# =============================================================================
# MYPY - Type Checking
# =============================================================================
[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
show_error_codes = true
exclude = [
    "_references/",
    "_literature/",
]

[[tool.mypy.overrides]]
module = [
    "nibabel.*",
    "monai.*",
    "optuna.*",
    "hydra.*",
    "omegaconf.*",
    "tensorboard.*",
    "sklearn.*",
    "scipy.*",
    # Export dependencies (Spec 06)
    "onnxruntime",
    "onnxruntime.*",
    "onnxsim",
    "onnxsim.*",
    "onnxconverter_common",
    "onnxconverter_common.*",
    "onnx_tf",
    "onnx_tf.*",
]
ignore_missing_imports = true

# Ignore type checking errors for modules that import untyped export dependencies
[[tool.mypy.overrides]]
module = [
    "tests.test_export.*",
    "arc_meshchop.export.*",
]
disable_error_code = ["import-untyped", "import-not-found"]

# =============================================================================
# COVERAGE - Test Coverage
# =============================================================================
[tool.coverage.run]
source = ["src/arc_meshchop"]
branch = true
omit = [
    "*/__init__.py",
    "*/cli.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
